--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -3,7 +3,8 @@
 @using System
 @using System.Collections.Generic
 @using System.Linq
-@using HlidacStatu.Web.Models
+@using HlidacStatu.Web.Models;
+@using Devmasters.Collections;
 
 @{ 
     Layout = null;
@@ -59,14 +60,16 @@
 <p>
     Rychlá navigace:
     <ul>
-        
+            <li><a href="KapacitaKazdeNemocnice">Grafy změn kapacit jednotlivých nemocnic za poslední dny</a> <span class="exclusive">Nové</span></li>
+
         <li><a href="#CR">Celá ČR</a></li>
         @foreach (var h in lastKraje.regions.OrderBy(o => krajeSort.IndexOf(o.region)).ToArray())
         {
             <li><a href="#@h.region">@h.regionFull()</a></li>
         }
         <hr/>
-        <li><a href="#nemocnice">Kapacita jednotlivých nemocnic</a></li>
+        <li><a href="KapacitaKazdeNemocnice">Grafy změn kapacit jednotlivých nemocnic za poslední dny</a> <span class="exclusive">Nové</span></li>
+        <li><a href="#nemocnice">Tabulka kapacit jednotlivých nemocnic</a></li>
         <li><a href="#opendata">Open data</a></li>
     </ul>
 </p>
@@ -116,6 +119,10 @@ tbl_nem_o = $('#nem_o').DataTable({
 </script>
 
 <p class="text-warning">Data o nemocnicích jsou aktualizována jindy, než souhrny krajů. V součtech proto může dojít k malým nepřesnostem.</p>
+
+<p><a href="KapacitaKazdeNemocnice">Grafy průběhu kapacit jednotlivých nemocnic</a> <span class="exclusive">Nové</span></p>
+
+
 <p style="font-weight:bold">Kliknutím na sloupec můžete třídit podle abecedy nebo počtu volných COVID míst/přístrojů.</p>
 <table id="nem_o" class="table-sorted table table-bordered table-striped">
     <thead>
@@ -144,7 +151,10 @@ tbl_nem_o = $('#nem_o').DataTable({
             }
             var dh = NemocniceOnlyData.Diff(diffNem, h);
             <tr>
-                <td>@h.name<br />(změna od @startNem.lastUpdated.ToString("dd.MM.") do @h.lastModified.ToString("dd.MM."))</td>
+                <td>@h.name
+                <br/><a href="kapacitaKazdeNemocnice#@(h.nemocniceID)" style="font-weight:bold">Změny v čase <i class="far fa-chart-line-down"></i></a>
+                <br />(změna od @startNem.lastUpdated.ToString("dd.MM.") do @h.lastModified.ToString("dd.MM."))
+                </td>
                 <td>@h.regionFull()</td>
                 <td data-order="@h.lastModified.Ticks">@(h.lastModified.ToString("dd.MM."))<br/>@(h.lastModified.ToString("HH:ss"))</td>
                 <td style='white-space: nowrap;font-weight:bold;' data-order="@h.AROJIP_luzka_covid">@h.AROJIP_luzka_covid / @h.AROJIP_luzka_necovid z @h.AROJIP_luzka_celkem
